Sat Dec 20 09:22:38 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Node_Daemon_Server.cpp:
        * cuts/utils/logging/server/Logging_Server.cpp:
        * cuts/utils/logging/server/Logging_Server_File.cpp:
        * cuts/utils/testing/Test_Configuration_File.cpp:
        * cuts/utils/testing/Testing_App.cpp:

          . Updated CUTS to build with the latest version of XSC.

        * CUTS_CIAO.mwc:

          Removed this file.

Sat Dec 20 09:15:57 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.mpc:

          . Remove the file below from the project.

        * MDE/GME/T2M/parsers/Scatter_Deployment/Deployment_Map.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache.cpp:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_Manager.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_Manager.cpp:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_T.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_T.cpp:

          Removed these files.

Sat Dec 20 09:11:16 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/CUTS_NAOMI.mwc:

          . Stand-alone workspace for building NAOMI specific projects.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/Main_Dialog.cpp:

          . Update XSC code to work with latest version of XSC.

        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.cpp:
        * MDE/naomi/GME/GNC.mpc:
        * MDE/naomi/GME/GNC_App.h:
        * MDE/naomi/GME/GNC_App.cpp:
        * MDE/naomi/GME/Naomi_Parser.h:
        * MDE/naomi/GME/attribute.h:
        * MDE/naomi/GME/attribute.inl:
        * MDE/naomi/GME/attribute.cpp: